[gd_scene load_steps=6 format=3 uid="uid://do78mwbi4kejr"]

[ext_resource type="Script" path="res://Console.gd" id="1_btm5f"]
[ext_resource type="PackedScene" uid="uid://x5jmoe6je48s" path="res://lisp_interpreter.tscn" id="1_ksg82"]
[ext_resource type="FontFile" uid="uid://0emb5p7yi5hu" path="res://RecMonoDuotone-Regular-1.085.ttf" id="3_8iscn"]
[ext_resource type="FontFile" uid="uid://6h7twilrc1lv" path="res://RecMonoSemicasual-Regular-1.085.ttf" id="4_r83yh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_whh0b"]
bg_color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="Console" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_btm5f")

[node name="LispInterpreter" parent="." instance=ExtResource("1_ksg82")]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="ConsoleLines" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_fonts/normal_font = ExtResource("3_8iscn")
theme_override_font_sizes/normal_font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_whh0b")
text = "repl:>"
scroll_following = true
selection_enabled = true

[node name="HSeparator5" type="HSeparator" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="InputLine" type="CodeEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_8iscn")
theme_override_font_sizes/font_size = 18
indent_wrapped_lines = true
highlight_all_occurrences = true
draw_tabs = true
gutters_draw_line_numbers = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="SendButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_r83yh")
text = "Send"

[node name="ClearButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_r83yh")
text = "Clear"

[node name="HSeparator4" type="HSeparator" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 1

[node name="AstViewer" type="Tree" parent="HBoxContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/inner_item_margin_left = 10
theme_override_constants/draw_guides = 0
theme_override_constants/draw_relationship_lines = 1
theme_override_constants/relationship_line_width = 2
columns = 2
metadata/_tab_index = 0

[node name="Environment" type="ItemList" parent="HBoxContainer/VBoxContainer/TabContainer"]
layout_mode = 2
item_count = 1
metadata/_tab_index = 1

[node name="Examples" type="CodeEdit" parent="HBoxContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
editable = false
metadata/_tab_index = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
